src/objects/echosign_dev1__Recipient_Template__c.object
<CustomObject>
    <customHelpPage>echosign_dev1__EchoSignUserGuide</customHelpPage>
    <fields>
        <fullName>echosign_dev1__Account_Contact_Role__c</fullName>
        <label>Account Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Agreement_Template__c</fullName>
        <label>Agreement Template</label>
        <referenceTo>echosign_dev1__Agreement_Template__c</referenceTo>
        <relationshipName>Recipient_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Contact_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient - Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Add Recipients</relationshipLabel>
        <relationshipName>Recipient_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Do_Not_Create_Empty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you do not want a blank placeholder recipient to be created on the agreement page if no record is found based on the selected criteria.</description>
        <inlineHelpText>Check this box if you do not want a blank placeholder recipient to be created on the agreement page if no record is found based on the selected criteria.</inlineHelpText>
        <label>Do Not Create Blank Recipient Row</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Email_Recipient__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Group_Recipient__c</fullName>
        <label>Recipient - Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Index__c</fullName>
        <description>Set the signing order index for the recipient generated by this template. Setting the same order number for multiple recipient templates will use hybrid recipients.</description>
        <inlineHelpText>Set the signing order index for the recipient generated by this template. Setting the same order number for multiple recipient templates will use hybrid recipients.</inlineHelpText>
        <label>Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Lead_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient - Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Add Recipients</relationshipLabel>
        <relationshipName>Recipient_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Opportunity_Contact_Role__c</fullName>
        <label>Opportunity Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Participant_Set_Index__c</fullName>
        <label>Participant Set Index</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Phone_Verification_Country_Code__c</fullName>
        <label>Phone Verification Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>212</fullName>
                </value>
                <value>
                    <fullName>213</fullName>
                </value>
                <value>
                    <fullName>216</fullName>
                </value>
                <value>
                    <fullName>221</fullName>
                </value>
                <value>
                    <fullName>225</fullName>
                </value>
                <value>
                    <fullName>230</fullName>
                </value>
                <value>
                    <fullName>231</fullName>
                </value>
                <value>
                    <fullName>233</fullName>
                </value>
                <value>
                    <fullName>234</fullName>
                </value>
                <value>
                    <fullName>254</fullName>
                </value>
                <value>
                    <fullName>255</fullName>
                </value>
                <value>
                    <fullName>260</fullName>
                </value>
                <value>
                    <fullName>262</fullName>
                </value>
                <value>
                    <fullName>263</fullName>
                </value>
                <value>
                    <fullName>264</fullName>
                </value>
                <value>
                    <fullName>265</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>297</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>32</fullName>
                </value>
                <value>
                    <fullName>33</fullName>
                </value>
                <value>
                    <fullName>34</fullName>
                </value>
                <value>
                    <fullName>351</fullName>
                </value>
                <value>
                    <fullName>352</fullName>
                </value>
                <value>
                    <fullName>353</fullName>
                </value>
                <value>
                    <fullName>354</fullName>
                </value>
                <value>
                    <fullName>357</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Phone_Verification_Phone_Number__c</fullName>
        <label>Phone Verification Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Field__c</fullName>
        <label>Select Source Field from Master Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Message__c</fullName>
        <description>Set a unique message for the recipient.</description>
        <inlineHelpText>Set a unique message for the recipient.</inlineHelpText>
        <label>Recipient Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Role__c</fullName>
        <label>Recipient Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signer</fullName>
                    <default>true</default>
                    <label>Signer</label>
                </value>
                <value>
                    <fullName>Approver</fullName>
                </value>
                <value>
                    <fullName>Acceptor</fullName>
                </value>
                <value>
                    <fullName>Form Filler</fullName>
                </value>
                <value>
                    <fullName>Certified Recipient</fullName>
                </value>
                <value>
                    <fullName>Delegate to Signer</fullName>
                </value>
                <value>
                    <fullName>Delegate to Approver</fullName>
                </value>
                <value>
                    <fullName>Delegate to Acceptor</fullName>
                </value>
                <value>
                    <fullName>Delegate to Form Filler</fullName>
                </value>
                <value>
                    <fullName>Delegate to Certified Recipient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Type__c</fullName>
        <label>Recipient Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                    <default>true</default>
                    <label>Contact</label>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Workflow_Label__c</fullName>
        <description>Recipient label defined in sign workflow</description>
        <inlineHelpText>Recipient label defined in sign workflow</inlineHelpText>
        <label>Recipient Workflow Label</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Related_Recipient_Relationship__c</fullName>
        <label>Related Recipient Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Related_Selection_Field__c</fullName>
        <label>Related Selection Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Last Modified Date</fullName>
                    <default>true</default>
                    <label>Last Modified Date</label>
                </value>
                <value>
                    <fullName>Created Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Related_Selection_Type__c</fullName>
        <label>Related Selection Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Latest</fullName>
                    <default>true</default>
                    <label>Latest</label>
                </value>
                <value>
                    <fullName>Oldest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Signer_Verification_Method__c</fullName>
        <label>Signer Verification Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>Password</fullName>
                </value>
                <value>
                    <fullName>KBA</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Government ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Type__c</fullName>
        <label>Source of Recipient</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Predefine the Recipient</fullName>
                    <default>true</default>
                    <label>Predefine the Recipient</label>
                </value>
                <value>
                    <fullName>Look Up Based on Master Object Field</fullName>
                </value>
                <value>
                    <fullName>Opportunity Primary Contact Role</fullName>
                </value>
                <value>
                    <fullName>Opportunity Contact Role</fullName>
                </value>
                <value>
                    <fullName>All Opportunity Contact Roles</fullName>
                </value>
                <value>
                    <fullName>Account Primary Contact Role</fullName>
                </value>
                <value>
                    <fullName>Account Contact Role</fullName>
                </value>
                <value>
                    <fullName>All Account Contact Roles</fullName>
                </value>
                <value>
                    <fullName>Runtime Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Uniform_Index__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this option to set the same index for a template which results in multiple recipients, making them hybrid signers.</description>
        <inlineHelpText>Enable this option to set the same index for a template which results in multiple recipients, making them hybrid signers.</inlineHelpText>
        <label>Uniform Index</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__User_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient - User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recipient_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Variable_Name__c</fullName>
        <label>Variable Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Add Recipient</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Recipient Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Add Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>